tdf#124676 : use case-insensitive normalization of...

ScDPCache field labels, else on export to xlsx,
Excel will fail to load the pivot table due to case-insensitive
duplicate field labels in the pivotCacheDefinition1.xml.

This could be done just for xlsx export filter, but we do normalization
in dpcache.cxx anyway and it would not hurt if we do a case-insensitive
normalization here.

The private member ScDPCache::AddLabel had code duplication and
more importantly it is called in loop for every label in the database
so results in O(n^2) time complexity where n is the number of labels,
so removed it to reuse normalizeLabels() at the only call-site.

Also added a unit test that checks case-insensitive normalization.

Change-Id: Id563dee232a98a2aea9f4fc29254f6942e1c5ba7
Reviewed-on: https://gerrit.libreoffice.org/70498
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Reviewed-by: Dennis Francis <dennis.francis@collabora.com>
(cherry picked from commit 238cadd315901cbacfd9304bb1205e9f53f13eae)
Reviewed-on: https://gerrit.libreoffice.org/70703